works with queue message

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
   "azureFunctions.projectLanguage": "C#",
   "azureFunctions.projectRuntime": "~3",
   "debug.internalConsoleOptions": "neverOpen",
-  "azureFunctions.preDeployTask": "publish"
+  "azureFunctions.preDeployTask": "publish",
+  "azureLogicAppsV2.deploySubpath": "bin/Release/netcoreapp3.1/publish",
+  "azureLogicAppsV2.projectLanguage": "C#",
+  "azureLogicAppsV2.projectRuntime": "~3",
+  "azureLogicAppsV2.preDeployTask": "publish"
 }
